# property_owner_accountability

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  scrapy.cfg
rental_registry/: exporters.py  items.py  middlewares.py  pipelines.py  settings.py
rental_registry/spiders/: rental_registry_spider.py
